--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         .logo-container {
             display: flex;
             align-items: center;
-            gap: 1rem;
+            gap: .3rem;
         }
 
         .logo {
@@ -955,7 +955,7 @@
     <nav id="navbar">
         <div class="nav-container">
             <div class="logo-container">
-                <svg class="logo" viewBox="0 0 100 100">
+                <img src="Ronkelogo.png" class="logo" alt="">
                     <defs>
                         <linearGradient id="heartGradient" x1="0%" y1="0%" x2="100%" y2="100%">
                             <stop offset="0%" style="stop-color:#E85D75;stop-opacity:1" />
@@ -1003,7 +1003,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="https://placehold.co/800x600/FFF5F7/E85D75?text=Elderly+Woman+on+Phone&font=roboto" 
+                <img src="senior.jpg" 
                      alt="Elderly woman smiling while talking on phone at home" 
                      style="width: 100%; border-radius: 30px; box-shadow: 0 30px 60px rgba(0,0,0,0.2);">
             </div>
